--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,9 @@
             </div>
 
             <div class="btn-container">
-              <div class="btn-pink" id="btn">Hire me</div>
+              <div>
+                <a href="#contactme" class="btn-pink" id="btn">Hire me</a>
+              </div>
             </div>
           </div>
 
@@ -128,15 +130,24 @@
                 pathfinding algorithms( A*,DFS and BFS) with odd square size
                 nodes upto 80(i.e 79)..
               </div>
-              <div class="btn-group">
-                <button class="btn-pink btn-project">Read More</button>
-                <a href="">
-                  <i title="Githublive" class="fa-brands fa-github"></i>
-                </a>
-                <a href="">
-                  <i title="livelink" class="fa-brands fa-github"></i>
-                </a>
-              </div>
+              <a
+                href="https://github.com/aa-rju/algo_comparator/releases/tag/algorithm-comparator"
+                target="_blank"
+              >
+                <div class="btn-group">
+                  <button class="btn-pink btn-project">Visit</button>
+                  <a
+                    href="https://github.com/aa-rju/algo_comparator/releases/tag/algorithm-comparator"
+                  >
+                    <i title="Githublive" class="fa-brands fa-github fa-2x"></i>
+                  </a>
+                  <!-- <a
+                    href="https://github.com/aa-rju/algo_comparator/releases/tag/algorithm-comparator"
+                  >
+                    <i title="livelink" class="fa-brands fa-github"></i>
+                  </a> -->
+                </div>
+              </a>
             </div>
           </div>
           <div class="project-card" id="project2">
@@ -192,15 +203,17 @@
                 perfect for learning modular coding and creating dynamic,
                 interactive experiences in a lightweight environment.
               </div>
-              <div class="btn-group">
-                <button class="btn-pink btn-project">Read More</button>
-                <a href="">
-                  <i title="Githublive" class="fa-brands fa-github"></i>
-                </a>
-                <a href="">
+              <a href="https://aa-rju.github.io/stick_Game/">
+                <div class="btn-group">
+                  <button class="btn-pink btn-project">Visit</button>
+                  <a href="https://github.com/aa-rju/stick_Game">
+                    <i title="Githublive" class="fa-brands fa-github fa-2x"></i>
+                  </a>
+                  <!-- <a href="">
                   <i title="livelink" class="fa-brands fa-github"></i>
-                </a>
-              </div>
+                </a> -->
+                </div>
+              </a>
             </div>
           </div>
           <div class="project-card" id="project3">
@@ -251,15 +264,17 @@
                 React. 🔑 Key features: Random GIF generator 🎲 Tag-based GIF
                 search 🏷️
               </div>
-              <div class="btn-group">
-                <button class="btn-pink btn-project">Read More</button>
-                <a href="">
-                  <i title="Githublive" class="fa-brands fa-github"></i>
-                </a>
-                <a href="">
-                  <i title="livelink" class="fa-brands fa-github"></i>
-                </a>
-              </div>
+              <a href="https://aa-rju.github.io/gif/">
+                <div class="btn-group">
+                  <button class="btn-pink btn-project">Visit</button>
+                  <a href="https://github.com/aa-rju/gif">
+                    <i title="Githublive" class="fa-brands fa-github fa-2x"></i>
+                  </a>
+                  <!-- <a href="">
+                    <i title="livelink" class="fa-brands fa-github"></i>
+                  </a> -->
+                </div>
+              </a>
             </div>
           </div>
           <div class="onprogress-container">
@@ -306,120 +321,131 @@
                   class="project-skill"
                 />
               </div>
-              <h2 class="project-heading">Tint and Orange</h2>
+              <h2 class="project-heading">Educational Platform</h2>
               <div class="project-subheading">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Assumenda aliquid quasi corrupti sed animi impedit pariatur
-                deleniti, quae totam quis praesentium? Quaerat expedita natus
-                corrupti.
+                A MERN stack website for a educational website (with student,
+                tutors and Admin roles) with payment methods onprogress as a
+                self development coding journey , the backend is almost complete
+                ,functionalities checked with Postman ,am currently working with
+                frontend and intrigration.For now navigating to Homepage can
+                give you the idea. The available code is pushed to my github
+                account..
               </div>
-              <div class="btn-group">
-                <button class="btn-pink btn-project">Read More</button>
-                <a href="">
-                  <i title="Githublive" class="fa-brands fa-github"></i>
-                </a>
-                <a href="">
-                  <i title="livelink" class="fa-brands fa-github"></i>
-                </a>
-              </div>
+              <a href="https://aa-rju.github.io/MERN/">
+                <div class="btn-group">
+                  <button class="btn-pink btn-project">Visit</button>
+                  <!-- <a href="">
+                  <i title="Githublive" class="fa-brands fa-github fa-2x"></i>
+                </a> -->
+                  <a href="https://github.com/aa-rju/MERN">
+                    <i title="livelink" class="fa-brands fa-github fa-2x"></i>
+                  </a>
+                </div>
+              </a>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="container skills-container" id="skills">
-        <div class="skill-fade-text">Skills</div>
+      <div class="skills-section">
+        <div class="container skills-container" id="skills">
+          <div class="skill-fade-text">Skills</div>
 
-        <div class="skill-container-left">
-          <h2 class="skill-heading">
-            <span class="caps">M</span>e and
-            <br />
-            MyTech Stack
-          </h2>
+          <div class="skill-container-left">
+            <h2 class="skill-heading">
+              <span class="caps">M</span>e and
+              <br />
+              MyTech Stack
+            </h2>
 
-          <div class="skill-subHeading">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
-              animi vitae quaerat voluptatem, adipisci reiciendis molestiae
-              minus cum? Rerum ex molestiae perferendis itaque impedit
-              exercitationem? Sed explicabo alias dignissimos rem veritatis
-              obcaecati excepturi placeat aperiam est architecto. Illo dicta
-              doloribus perspiciatis officiis voluptas cumque saepe itaque
-              nostrum. Corporis, excepturi vero!
-            </p>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis
-              officiis ullam impedit porro, modi voluptatum.
-            </p>
+            <div class="skill-subHeading">
+              <p>
+                My tech stack combines modern technologies that help me build
+                robust and user-friendly web applications. I use HTML5 and CSS3
+                for semantic, accessible designs, while JavaScript drives
+                interactivity. I prefer React for front-end development due to
+                its reusable components,(however, i have a slight experience of
+                working with vue.js as well) and Node.js with Express.js for
+                building seamless backend solutions. Tailwind CSS and Bootstrap
+                simplify responsive styling, while Next.js enhances my React
+                projects with server-side rendering. Version control with Git
+                and GitHub ensures smooth collaboration, while Redux efficiently
+                manages complex state.
+              </p>
+              <p>
+                Together, these technologies allow me to bring innovative ideas
+                to life, from simple websites to sophisticated web applications.
+              </p>
+            </div>
           </div>
-        </div>
 
-        <div class="skill-container-right">
-          <img
-            src="./images/stack/icons8-html-5-48.png"
-            alt=""
-            class="skills-logo"
-          />
-          <img
-            src="./images/stack/icons8-css-48.png"
-            alt=""
-            class="skills-logo"
-          />
-          <img
-            src="./images/stack/icons8-js-48.png"
-            alt=""
-            class="skills-logo"
-          />
-          <img
-            src="./images/stack/icons8-express-js-50.png"
-            alt=""
-            class="skills-logo"
-          />
-          <img
-            src="./images/stack/icons8-nodejs-48.png"
-            alt=""
-            class="skills-logo"
-          />
-          <img
-            src="./images/stack/icons8-tailwindcss-48.png"
-            alt=""
-            class="skills-logo"
-          />
-          <img
-            src="./images/stack/8546808_bootstrap_icon.png"
-            alt=""
-            class="skills-logo"
-          />
-          <img
-            src="./images/stack/9118036_nextjs_fill_icon.svg"
-            alt=""
-            class="skills-logo"
-          />
-          <img
-            src="./images/stack/1174949_js_react js_logo_react_react native_icon.svg"
-            alt=""
-            class="skills-logo"
-          />
-          <img
-            src="./images/stack/1298743_github_git_logo_social_icon.png"
-            alt=""
-            class="skills-logo"
-          />
-          <img
-            src="./images/stack/4691205_redux_icon.svg"
-            alt=""
-            class="skills-logo"
-          />
-          <img
-            src="./images/stack/splotch-solid.svg"
-            alt=""
-            class="blob-style"
-          />
-          <!-- <img
+          <div class="skill-container-right">
+            <img
+              src="./images/stack/icons8-html-5-48.png"
+              alt=""
+              class="skills-logo"
+            />
+            <img
+              src="./images/stack/icons8-css-48.png"
+              alt=""
+              class="skills-logo"
+            />
+            <img
+              src="./images/stack/icons8-js-48.png"
+              alt=""
+              class="skills-logo"
+            />
+            <img
+              src="./images/stack/icons8-express-js-50.png"
+              alt=""
+              class="skills-logo"
+            />
+            <img
+              src="./images/stack/icons8-nodejs-48.png"
+              alt=""
+              class="skills-logo"
+            />
+            <img
+              src="./images/stack/icons8-tailwindcss-48.png"
+              alt=""
+              class="skills-logo"
+            />
+            <img
+              src="./images/stack/8546808_bootstrap_icon.png"
+              alt=""
+              class="skills-logo"
+            />
+            <img
+              src="./images/stack/9118036_nextjs_fill_icon.svg"
+              alt=""
+              class="skills-logo"
+            />
+            <img
+              src="./images/stack/1174949_js_react js_logo_react_react native_icon.svg"
+              alt=""
+              class="skills-logo"
+            />
+            <img
+              src="./images/stack/1298743_github_git_logo_social_icon.png"
+              alt=""
+              class="skills-logo"
+            />
+            <img
+              src="./images/stack/4691205_redux_icon.svg"
+              alt=""
+              class="skills-logo"
+            />
+            <img
+              src="./images/stack/splotch-solid.svg"
+              alt=""
+              class="blob-style"
+            />
+            <!-- <img
             src="./images/stack/splotch-solid(1).svg"
             alt=""
             class="blob-style2"
           /> -->
+          </div>
         </div>
       </div>
 
@@ -447,14 +473,14 @@
                   name="email"
                   id=""
                   required
-                  placeholder="Enter your email address"
+                  placeholder="Enter your email"
                 />
                 <input
                   class="formfield"
                   type="text"
                   name="subject"
                   id=""
-                  placeholder="Enter your Subject"
+                  placeholder="Enter Subject"
                 />
                 <textarea
                   name="message"
@@ -491,8 +517,13 @@
 
       <footer>
         <div class="container">
+          <div class="footer-div">
+            <p class="footer-faded-text">Aarju Mahata</p>
+            <p class="footer-copyright">
+              &copy; 2024 Aarju Mahata. All rights reserved.
+            </p>
+          </div>
           <div class="footer-wrapper">
-            <div class="footer-faded-text">Aarju Mahata</div>
             <div class="link-wrapper">
               <div>
                 <a href="#projects">Projects</a>
@@ -506,11 +537,20 @@
             </div>
 
             <div class="icon-wrapper">
-              <i class="fa-brands fa-linkedin"></i>
-              <i class="fa-brands fa-github"></i>
-              <i class="fa-brands fa-twitter"></i>
-              <i class="fa-brands fa-square-instagram"></i>
-              <i class="fa-solid fa-envelope"></i>
+              <a href="https://linkedin.com/in/aarju-mahata-2a580a214">
+                <i class="fa-brands fa-linkedin"></i>
+              </a>
+              <a href="https://github.com/aa-rju">
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <!-- <i class="fa-brands fa-twitter"></i> -->
+              <a href="https://www.facebook.com/aarjju.mahata">
+                <i class="fa-brands fa-facebook"></i>
+              </a>
+
+              <a href="mailto:mahataaarju@gmail.com">
+                <i class="fa-solid fa-envelope"></i>
+              </a>
             </div>
           </div>
         </div>
