--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="nav-items">
             <div><a id="nav" href="#projects">Projects</a></div>
             <div><a id="nav" href="#skills">Skills</a></div>
-            <div><a id="nav" href="#contactme">Contact Me</a></div>
+            <div><a id="nav" href="#contactme">Contact</a></div>
             <div><button id="theme-toggle">☀️</button></div>
             <!-- <div><button id="theme-toggle"> </button></div> -->
           </div>
@@ -451,7 +451,7 @@
 
       <div class="contactus-form-container" id="contactme">
         <div class="container">
-          <h1 class="contactus-heading">Contact me</h1>
+          <h1 class="contactus-heading">Contact</h1>
           <h3 class="contactus-sub-heading">
             Questions,thoughts, or just want to say hello?
           </h3>
@@ -532,7 +532,7 @@
                 <a href="#skills">Skills</a>
               </div>
               <div>
-                <a href="#contactme">Contact Me</a>
+                <a href="#contactme">Contact</a>
               </div>
             </div>
 
