--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
           <div class="hero-section-right">
             <div class="absolute icons icon-dots">
-              <img src="./images/userAssest/dot.png" alt="" />
+              <img src="./images//userAssest/dot.png" alt="" />
             </div>
             <div class="absolute icons icon-cube">
               <img src="./images/userAssest/cube.png" alt="" />
