--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="nav-items">
             <div><a id="nav" href="#projects">Projects</a></div>
             <div><a id="nav" href="#skills">Skills</a></div>
-            <div><a id="nav" href="#contactme">Contact</a></div>
+            <!-- <div><a id="nav" href="#contactme">Contact</a></div> -->
             <div><button id="theme-toggle">☀️</button></div>
             <!-- <div><button id="theme-toggle"> </button></div> -->
           </div>
@@ -42,7 +42,12 @@
 
             <div class="btn-container">
               <div>
-                <a href="#contactme" class="btn-pink" id="btn">Hire me</a>
+                <a
+                  href="https://linkedin.com/in/aarju-mahata-2a580a214"
+                  class="btn-pink"
+                  id="btn"
+                  >Hire me</a
+                >
               </div>
             </div>
           </div>
@@ -449,7 +454,7 @@
         </div>
       </div>
 
-      <div class="contactus-form-container" id="contactme">
+      <!-- <div class="contactus-form-container" id="contactme">
         <div class="container">
           <h1 class="contactus-heading">Contact</h1>
           <h3 class="contactus-sub-heading">
@@ -513,7 +518,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <footer>
         <div class="container">
@@ -531,9 +536,9 @@
               <div>
                 <a href="#skills">Skills</a>
               </div>
-              <div>
+              <!-- <div>
                 <a href="#contactme">Contact</a>
-              </div>
+              </div> -->
             </div>
 
             <div class="icon-wrapper">
