--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                 give you the idea. The available code is pushed to my github
                 account..
               </div>
-              <a href="https://aa-rju.github.io">
+              <a href="https://aa-rju.github.io/MERN/">
                 <div class="btn-group">
                   <button class="btn-pink btn-project">Visit</button>
                   <!-- <a href="">
