--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
             </p>
           </div>
           <div class="footer-wrapper">
-            <div class="link-wrapper">
+<!--             <div class="link-wrapper">
               <div>
                 <a href="#projects">Projects</a>
               </div>
@@ -539,7 +539,7 @@
               <!-- <div>
                 <a href="#contactme">Contact</a>
               </div> -->
-            </div>
+            </div> -->
 
             <div class="icon-wrapper">
               <a href="https://linkedin.com/in/aarju-mahata-2a580a214">
