--- a/index.html
+++ b/index.html
@@ -529,17 +529,17 @@
             </p>
           </div>
           <div class="footer-wrapper">
-            <!-- <div class="link-wrapper">
+            <div class="link-wrapper">
               <div>
                 <a href="#projects">Projects</a>
               </div>
               <div>
                 <a href="#skills">Skills</a>
               </div>
-               <div>
+              <div>
                 <a href="#contactme">Contact</a>
               </div>
-            </div> -->
+            </div>
 
             <div class="icon-wrapper">
               <a href="https://linkedin.com/in/aarju-mahata-2a580a214">
