--- a/index.html
+++ b/index.html
@@ -536,9 +536,9 @@
               <div>
                 <a href="#skills">Skills</a>
               </div>
-              <div>
+              <!-- <div>
                 <a href="#contactme">Contact</a>
-              </div>
+              </div> -->
             </div>
 
             <div class="icon-wrapper">
